--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
   display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-gap: 20px;
 }
 
-/* TODO: remove **/
-.temp-images {
-  height: 200px;
+.App main {
+  overflow: auto;
 }
